# r-maze

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  builder.sh  default.nix  play.sh  test-arena.txt  test-maze.txt
c_src/: directionals.c  directionals.h  internals.c  internals.h  maze_gen.c  maze_gen.h
src/: geometry.rs  light.rs  main.rs  mazes.rs
src/mazes/: maze_gen.rs
