[package]
name = "r-maze"
version = "0.1.0"
authors = ["octalsrc <nicklewchenko92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
libc = "0.2.66"
gfx_device_gl = "0.15.5"
piston = "0.46.0"
piston_window = "0.96.0"
